# typeo

./: .editorconfig  .gitignore  CMakeLists.txt  README-TypeO.txt  README.md  ReleaseNotes  ReleaseNotes.txt  typeo.sln
Box2D/: CMakeLists.txt
Box2D/Collision/: BroadPhase.cs  Collision.cs  Distance.cs  DynamicTree.cs  TimeOfImpact.cs
Box2D/Collision/Shapes/: CircleShape.cs  EdgeShape.cs  LoopShape.cs  PolygonShape.cs  Shape.cs
Box2D/Common/: FixedArray.cs  Math.cs  Settings.cs
Box2D/Dynamics/: Body.cs  ContactManager.cs  Fixture.cs  Island.cs  TimeStep.cs  World.cs  WorldCallbacks.cs
Box2D/Dynamics/Contacts/: Contact.cs  ContactSolver.cs  TOISolver.cs
Box2D/Dynamics/Joints/: DistanceJoint.cs  FrictionJoint.cs  GearJoint.cs  Joint.cs  LineJoint.cs  MaxDistanceJoint.cs  MouseJoint.cs  PrismaticJoint.cs  PullyJoint.cs  RevoluteJoint.cs  WeldJoint.cs
Box2D/Properties/: AssemblyInfo.cs
SampleGame/: CMakeLists.txt  PlayScene.cs  Program.cs  SampleGame.cs  SampleGame.csproj  SampleScene.cs  SampleService.cs  SpaceInvaderGame.cs
SampleGame/Entities/: Alien.cs  BlobEntity.cs  Bullet.cs  Player.cs  Space.cs
SampleGameCore/: CMakeLists.txt  SampleGame.cs  SampleScene.cs  SampleService.cs
SampleGameSDLWin/: CMakeLists.txt  Program.cs
Scripts/: build.py  (+6 more)
TypeOCommon/: CMakeLists.txt
TypeOCommon/Common/: Color.cs  Plane.cs  Ray.cs  Rectangle.cs  Vec2.cs  Vec3.cs
TypeOCommon/Typedeaf/TypeO/Common/: Color.cs  Plane.cs  Ray.cs  Rectangle.cs  Vec2.cs  Vec3.cs
TypeOCommon/Typedeaf/TypeOCommon/: Color.cs  Plane.cs  Ray.cs  Rectangle.cs  Vec2.cs  Vec3.cs
TypeOCore/: CMakeLists.txt  Main.cs  ReleaseNotes-TypeOCore.txt  TypeOCore.csproj  product
TypeOCore/Typedeaf/Basic/Services/: BasicCamera2dService.cs
TypeOCore/Typedeaf/Basic/Services/Interfaces/: ICamera2dService.cs
TypeOCore/Typedeaf/Core/: Game.cs  Logic.cs  LogicMulti.cs  Module.cs  Scene.cs  TypeO.cs
TypeOCore/Typedeaf/Core/Collections/: LazyList.cs
TypeOCore/Typedeaf/Core/Common/: Color.cs  Plane.cs  Ray.cs  Rectangle.cs  TMath.cs  Vec2.cs  Vec3.cs
TypeOCore/Typedeaf/Core/Contents/: Content.cs  ContentLoader.cs  Font.cs  Texture.cs
TypeOCore/Typedeaf/Core/Engine/: Context.cs  DefaultLogger.cs  DrawStack.cs  Drawable2dCreateOption.cs  DrawableManager.cs  DrawableOption.cs  EntityList.cs  LogLevel.cs  LogicManager.cs  Module.cs  SceneList.cs  TypeO.cs  UpdateLoop.cs  Version.cs
TypeOCore/Typedeaf/Core/Engine/Contents/: Content.cs  ContentLoader.cs  Font.cs  Texture.cs
TypeOCore/Typedeaf/Core/Engine/Graphics/: Canvas.cs  Window.cs
TypeOCore/Typedeaf/Core/Engine/Hardwares/: Hardware.cs
TypeOCore/Typedeaf/Core/Engine/Interfaces/: IDrawContext2d.cs  IHasTypeO.cs  ILogger.cs  ITypeO.cs
TypeOCore/Typedeaf/Core/Engine/Services/: KeyboardInputService.cs  Service.cs  WindowService.cs
TypeOCore/Typedeaf/Core/Entities/: Entity.cs  Entity2d.cs  EntityData.cs
TypeOCore/Typedeaf/Core/Entities/Drawables/: Drawable.cs  Drawable2d.cs  DrawableAnimation.cs  DrawableFont.cs  DrawableFontOption.cs  DrawableMulti.cs  DrawableTexture.cs  DrawableTextureOption.cs
TypeOCore/Typedeaf/Core/Entities/Interfaces/: IDrawable.cs  IHasData.cs  IHasDrawable.cs  IHasLogic.cs  IIsDrawable.cs
TypeOCore/Typedeaf/Core/Graphics/: Canvas.cs  Window.cs
TypeOCore/Typedeaf/Core/Input/: KeyConverter.cs
TypeOCore/Typedeaf/Core/Interfaces/: IHasGame.cs  IHasScenes.cs  IHasTypeO.cs  IIsUpdatable.cs  ITypeO.cs
TypeOCore/Typedeaf/Core/Services/: KeyboardInputService.cs  Service.cs  WindowService.cs
TypeOCore/Typedeaf/Core/Services/Interfaces/: IKeyboardInputService.cs  IService.cs  IWindowService.cs
TypeOCore/Typedeaf/TypeO/Engine/Content/: ContentLoader.cs  Font.cs  Texture.cs
TypeOCore/Typedeaf/TypeO/Engine/Core/: Game.cs  Module.cs  Scene.cs  Service.cs  TypeO.cs
TypeOCore/Typedeaf/TypeO/Engine/Graphics/: Canvas.cs  Window.cs
TypeOCore/Typedeaf/TypeO/Engine/Input/: InputHandler.cs  KeyConverter.cs  KeyboardInput.cs
TypeOCore/Typedeaf/TypeOCore/: Game.cs  Module.cs  Scene.cs  Service.cs  TypeO.cs  TypeORunner.cs
TypeOCore/Typedeaf/TypeOCore/Common/: Plane.cs  Rectangle.cs  Vec3.cs
TypeOCore/Typedeaf/TypeOCore/Content/: ContentLoader.cs  Font.cs  Texture.cs
TypeOCore/Typedeaf/TypeOCore/Contents/: Content.cs  ContentLoader.cs  Font.cs  Texture.cs
TypeOCore/Typedeaf/TypeOCore/Engine/Hardware/: HardwareBase.cs  IHardware.cs
TypeOCore/Typedeaf/TypeOCore/Engine/Hardwares/: Hardware.cs  HardwareBase.cs  IHardware.cs
TypeOCore/Typedeaf/TypeOCore/Entities/: Entity.cs  Entity2d.cs
TypeOCore/Typedeaf/TypeOCore/Entities/Drawables/: Drawable.cs  Drawable2d.cs  DrawableTexture.cs
TypeOCore/Typedeaf/TypeOCore/Graphics/: Canvas.cs  Window.cs
TypeOCore/Typedeaf/TypeOCore/Input/: InputHandler.cs  KeyConverter.cs  KeyboardInput.cs
TypeOCore/Typedeaf/TypeOCore/Interfaces/: IHasGame.cs  IHasTypeO.cs  IIsUpdatable.cs  ITypeO.cs
TypeOCore/Typedeaf/TypeOCore/Services/: IKeyboardInputService.cs  IService.cs  IWindowService.cs  KeyboardInputService.cs  Service.cs  WindowService.cs
TypeOCore/Typedeaf/TypeOCore/Services/Interfaces/: IKeyboardInputService.cs  IService.cs  IWindowService.cs
TypeOSDL/: CMakeLists.txt  TypeOSDL.csproj  product
TypeOSDL/Typedeaf/SDL/: SDLModule.cs  SDLModuleOption.cs
TypeOSDL/Typedeaf/SDL/Contents/: SDLContentLoader.cs  SDLFont.cs  SDLTexture.cs
TypeOSDL/Typedeaf/SDL/Engine/Contents/: SDLContentLoader.cs  SDLFont.cs  SDLTexture.cs
TypeOSDL/Typedeaf/SDL/Engine/Graphics/: SDLCanvas.cs  SDLWindow.cs
TypeOSDL/Typedeaf/SDL/Graphics/: SDLCanvas.cs  SDLWindow.cs
TypeOSDL/Typedeaf/TypeOSDL/: SDLGame.cs  SDLScene.cs  TypeOSDLModule.cs
TypeOSDL/Typedeaf/TypeOSDL/Content/: SDLContentLoader.cs  SDLFont.cs  SDLTexture.cs
TypeOSDL/Typedeaf/TypeOSDL/Contents/: SDLContentLoader.cs  SDLFont.cs  SDLTexture.cs
TypeOSDL/Typedeaf/TypeOSDL/Entities/: IIsSDLDrawable.cs  ISDLDrawable.cs
TypeOSDL/Typedeaf/TypeOSDL/Graphics/: SDLCanvas.cs  SDLWindow.cs
TypeOSDL/Typedeaf/TypeOSDL/Input/: SDLKeyboardInput.cs
TypeOSDL/Typedeaf/TypeOSDL/Services/: SDLKeyboardInputService.cs  SDLWindowService.cs
(+563 files in other folders)
