cmake_minimum_required (VERSION 3.15)

set(PROJECT_NAME    "SampleGame")
set(PROJECT_VERSION "0.1.0.0")
set(DOTNET_VERSION  "v4.8")
set(LANG_VERSION    "/langversion:8.0")
set(PROJECT_REFERENCES
	"System"
)
file(GLOB PROJECT_SRC
	"Program.cs"
	"SampleGame.cs"
	"SampleScene.cs"
	"SampleService.cs"
	"Entities/BlobEntity.cs"
)


project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CSharp)

set(CMAKE_CSharp_FLAGS ${LANG_VERSION})

add_executable(${PROJECT_NAME} ${PROJECT_SRC})

set_property( TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION ${DOTNET_VERSION} )
set_property( TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_REFERENCES ${PROJECT_REFERENCES} )
set_property( TARGET ${PROJECT_NAME} PROPERTY VS_GLOBAL_Prefer32Bit "false")

add_dependencies(${PROJECT_NAME} "TypeOCommon")
add_dependencies(${PROJECT_NAME} "TypeOCore")
add_dependencies(${PROJECT_NAME} "TypeOSDL")

set_property(TARGET ${PROJECT_NAME} PROPERTY 
    VS_DOTNET_REFERENCE_SDL2-CS "${CMAKE_CURRENT_SOURCE_DIR}/../TypeOSDL/SDL2-CS.dll")

file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libfreetype-6.dll"    DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libjpeg-9.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libpng16-16.dll"      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libtiff-5.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libwebp-7.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.freetype.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.jpeg.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.png.txt"      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.tiff.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.webp.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.zlib.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/README.txt"           DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/README-SDL.txt"       DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2.dll"             DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2_image.dll"       DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2_ttf.dll"         DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/zlib1.dll"            DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/content/image.png"            DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug/content/")
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/content/Awesome.ttf"          DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug/content/")
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/content/font.txt"             DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug/content/")