cmake_minimum_required (VERSION 3.15)

set(PROJECT_NAME    "SampleGameSDLWin")
set(PROJECT_VERSION "0.1.0.0")
set(DOTNET_VERSION  "v4.7.2")
set(LANG_VERSION    "/langversion:7.3")
set(PROJECT_REFERENCES
	"System"
)
file(GLOB PROJECT_SRC
	"Program.cs"
)


project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CSharp)

set(CMAKE_CSharp_FLAGS ${LANG_VERSION})

add_executable(${PROJECT_NAME} ${PROJECT_SRC})

set_property( TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION ${DOTNET_VERSION} )
set_property( TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_REFERENCES ${PROJECT_REFERENCES} )

add_dependencies(${PROJECT_NAME} "TypeOCommon")
add_dependencies(${PROJECT_NAME} "TypeOCore")
add_dependencies(${PROJECT_NAME} "TypeO2D")
add_dependencies(${PROJECT_NAME} "TypeOSDL")
add_dependencies(${PROJECT_NAME} "SampleGameCore")

file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libfreetype-6.dll"    DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libjpeg-9.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libpng16-16.dll"      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libtiff-5.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/libwebp-7.dll"        DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.freetype.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.jpeg.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.png.txt"      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.tiff.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.webp.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/LICENSE.zlib.txt"     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/README.txt"           DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/README-SDL.txt"       DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2.dll"             DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2_image.dll"       DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/SDL2_ttf.dll"         DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/../SDL2/zlib1.dll"            DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug")

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/content/image.png"            DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/Debug/content/")